# Proyecto_Final_prediccion-bandgap-oxidos

./: Ag_cluster_1.xyz  Ag_cluster_2.xyz  Ag_cluster_3.xyz  Ag_cluster_4.xyz  Au_cluster_1.xyz  Au_cluster_3.xyz  CHANGELOG.md  COMMIT_EDITMSG  CONTRIBUTING.md  Cu_cluster_1.xyz  Cu_cluster_2.xyz  Cu_cluster_3.xyz  Cu_cluster_4.xyz  Dockerfile  GITHUB_PUBLISH_INSTRUCTIONS.md  GOVERNANCE.md  INSTALL.md  LICENSE  Merged_Tareas.ipynb  Pd_cluster_2.xyz  Pd_cluster_3.xyz  README (1).md  README (11).md  README (2).md  README (3).md  README (4).md  README (5).md  README (6).md  README.md  SKILLS_ATTRIBUTION.md  Tarea 1.ipynb  Tarea 2.ipynb  U5_01_FUNDAMENTOS_AGENTES_MODERNOS.ipynb  U5_01_FUNDAMENTOS_AGENTES_MODERNOS.json  U5_02_LANGCHAIN_AVANZADO_LANGGRAPH.ipynb  U5_03_CREWAI_SISTEMAS_MULTIAGENTE.ipynb  U5_04_GOOGLE_ADK_A2A_COMP.ipynb  U5_04_GOOGLE_ADK_A2A_COMP_GEMMA4.ipynb  U5_05_RAG_MEMORIA_AVANZADA.ipynb  U5_06_GRAPH_RAG_MEMORIA.ipynb  (+108 more)
